# src/main/java/pl/kwojcik/project_lab/order/model/OrderPositionEntity.java
@@ -1,0 +1,28 @@
+package pl.kwojcik.project_lab.order.model;
+
+import jakarta.persistence.*;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+import pl.kwojcik.project_lab.products.ProductEntity;
+
+@Data
+@NoArgsConstructor
+@Entity
+public class OrderPositionEntity {
+
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private Long id;
+    private int productAmount;
+    @ManyToOne
+    @JoinColumn(name = "productId", nullable = false)
+    private ProductEntity product;
+    @ManyToOne(fetch = FetchType.EAGER)
+    private OrderEntity order;
+
+    public OrderPositionEntity(int productAmount, ProductEntity product, OrderEntity order) {
+        this.productAmount = productAmount;
+        this.product = product;
+        this.order = order;
+    }
+}
